<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/stepPicture"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/step_image"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_borsch"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stepText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="@dimen/common_spacing"
                android:layout_marginEnd="4dp"
                android:text="@string/step_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stepNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                app:layout_constraintStart_toEndOf="@id/stepText"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/optionsStep"
                style="@style/Widget.App.Button.OptionsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/recipe_options"
                app:icon="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/common_spacing"
            android:paddingEnd="@dimen/common_spacing">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stepContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/common_spacing"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Промытое мясо переложите в кастрюлю подходящего размера, залейте его холодной водой,
                 поставьте на плиту и доведите до кипения на сильном огне. Шумовкой снимите пену и сделайте огонь
                 меньше. Варите мясо в течение 1,5 часов под закрытой крышкой. В середине варки добавьте перец
                 горошком и лавровый лист. Я варю мясо целым куском, но вы можете его нарезать, сократив тем самым время варки в 2-4 раза." />


        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>