<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".ui.CurrentRecipeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeIcon"
        style="@style/Widget.AppTheme.LikeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/recipe_favorite"
        app:icon="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recipeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="#323232"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/likeIcon"
        app:layout_constraintTop_toBottomOf="@id/recipeAuthor"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Название рецепта" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recipeAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="#505050"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/category"
        app:layout_constraintStart_toEndOf="@id/likeIcon"
        app:layout_constraintTop_toBottomOf="@id/recipeTitle"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Автор рецепта" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/teal_700"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/options"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/likeIcon"
        app:layout_constraintTop_toBottomOf="@id/recipeAuthor"
        tools:text="Категория рецепта" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="category"
        tools:layout_editor_absoluteX="@dimen/common_spacing"
        tools:layout_editor_absoluteY="64dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.App.Button.OptionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recipe_options"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stepsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/header_barrier"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="32dp"
        tools:listitem="@layout/cooking_steps" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="stepsRecyclerView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_create_24" />

</androidx.constraintlayout.widget.ConstraintLayout>